+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.6.5
==========================

*Release date: XX-XXX-20XX*

Core and Builtins
-----------------

- Issue #1722344: threading._shutdown() is now called in Py_Finalize(), which
  fixes the problem of some exceptions being thrown at shutdown when the
  interpreter is killed. Patch by Adam Olsen.

- Issue #7084: Fix a (very unlikely) crash when printing a list from one
  thread, and mutating it from another one.  Patch by Scott Dial.

Library
-------

- Issue #7048: Force Decimal.logb to round its result when that result
  is too large to fit in the current precision.

Tests
-----

- Issue #7055: test___all__ now greedily detects all modules which have an
  __all__ attribute, rather than using a hardcoded and incomplete list.


What's New in Python 2.6.4 final?
=================================

*Release date: 25-Oct-2009*

Core and Builtins
-----------------

Library
-------


What's New in Python 2.6.4rc2?
==============================

*Release date: 18-Oct-2009*

Core and Builtins
-----------------

Library
-------

- Issue #7115: Fixed the extension module builds that is failing when using
  paths in the extension name instead of dotted names.

- Issue #7120: logging: Removed import of multiprocessing which is causing
  crash in GAE.

- Issue #7149: fix exception in urllib when detecting proxy settings on OSX.


What's New in Python 2.6.4rc1?
==============================

*Release date: 07-Oct-2009*

Core and Builtins
-----------------

- Issue #7019: Raise ValueError when unmarshalling bad long data, instead
  of producing internally inconsistent Python longs.

Library
-------

- Issue #7068: Fixed the partial renaming that occured in r72594.

- Issue #7064: Fixed the incompatibility with Setuptools in distutils
  when running the build_ext command.

- Issue #7052: Removed nonexisting NullHandler from logging.__all__.
